# pax

./: .gitignore  index.html  package-lock.json  package.json
.claude/: settings.local.json
scripts/: gen_android_icons.py  recolor_logo_blurple_to_iris.py
src/: App.css  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: autostart-desktop.json  default.json
src-tauri/icons/: icon.icns
src-tauri/libwebrtc-local/: .cargo_vcs_info.json  Cargo.toml
src-tauri/libwebrtc-local/src/: lib.rs  rtp_parameters.rs
src-tauri/libwebrtc-local/src/native/: rtp_parameters.rs
src-tauri/livekit-local/: .cargo_vcs_info.json  Cargo.toml
src-tauri/livekit-local/src/: lib.rs
src-tauri/livekit-local/src/room/: options.rs
src-tauri/livekit-local/src/room/track/: local_video_track.rs
src-tauri/src/: codec.rs  idle.rs  lib.rs  main.rs  native_overlay.rs  platform.rs  screen.rs  types.rs  video_recv.rs  voice.rs
src-tauri/src/commands/: auth.rs  avatar_cache.rs  codec.rs  config.rs  downloads.rs  embed.rs  lifecycle.rs  members.rs  messages.rs  mod.rs  notification_levels.rs  notifications.rs  overlay.rs  pax_settings.rs  presence.rs  profile.rs  push.rs  push_rules.rs  reconciler.rs  rooms.rs  space_order.rs  tray_indicator.rs  unread.rs  voice_matrix.rs
src-tauri/src/native_overlay/: desktop.rs  mod.rs  stub.rs
src-tauri/webrtc-sys-local/: build.rs
src-tauri/webrtc-sys-local/src/: video_decoder_factory.cpp
src-tauri/webrtc-sys-local/src/nvidia/: h264_encoder_impl.cpp  h265_encoder_impl.cpp
src-tauri/webrtc-sys-local/src/nvidia/NvCodec/include/Utils/: Logger.h
src/audio/: noiseSuppression.ts
src/components/: CircularUploadRing.tsx  CreateRoomDialog.tsx  CreateSpaceDialog.tsx  DiscoverView.tsx  DmPeerAvatar.tsx  InviteDialog.tsx  LeaveConfirmDialog.tsx  LinkEmbed.tsx  LinkExistingToSpaceDialog.tsx  MediaViewerModal.tsx  MediaViewerTextBody.tsx  MemberContextMenu.tsx  MessageFileAttachment.tsx  MessageInput.tsx  MessageList.tsx  MessageMarkdown.tsx  MessageMatrixImage.tsx  MessageMatrixVideo.tsx  MobileBottomNav.tsx  ModalLayer.tsx  ModerationScopeDialog.tsx  NavBackButton.tsx  NotificationSettingsPanel.tsx  ParentSpacesDialog.tsx  PinnedMessagesMenu.tsx  PowerLevelsSettingsPanel.tsx  QuitConfirmDialog.tsx  RoomContextMenu.tsx  RoomDownloadsButton.tsx  RoomSettingsDialog.tsx  RoomSettingsModal.tsx  RoomSidebar.tsx  ScreenShareGrid.tsx  ScreenShareViewer.tsx  (+15 more)
(+63 files in other folders)
