[package]
name = "pax"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pax_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
matrix-sdk = { version = "0.16", features = ["sqlite"] }
tokio = { version = "1", features = ["full"] }
libsqlite3-sys = { version = "0.35", features = ["bundled"] }
data-encoding = "2"
user-idle = "0.6"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = { version = "0.4", features = ["json"] }
reqwest-retry = "0.7"
urlencoding = "2"
jsonwebtoken = "9"
# LiveKit native voice (replaces browser-based livekit-client JS SDK)
livekit = { version = "0.7", features = ["rustls-tls-native-roots"] }
# Disable the default glib-main-loop feature since Tauri/GTK already runs one
libwebrtc = { version = "0.3", default-features = false }
cpal = "0.15"
futures-util = "0.3"
parking_lot = "0.12"
once_cell = "1.19"
log = "0.4"
tauri-plugin-log = "2"
nnnoiseless = "0.5.2"
screenshots = "0.8"
mime = "0.3"

# Native GPU overlay rendering (zero-IPC video)
wgpu = "25"
raw-window-handle = "0.6"
pollster = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.22"
windows-capture = "1.5"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "4", default-features = false, features = ["tokio"] }
webkit2gtk = { version = "2.0", features = ["v2_38"] }
ashpd = { version = "0.12", default-features = true }
gstreamer = "0.24"
gstreamer-app = "0.24"
gstreamer-video = "0.24"

[patch.crates-io]
livekit = { path = "livekit-local" }
libwebrtc = { path = "libwebrtc-local" }
webrtc-sys = { path = "webrtc-sys-local" }
